# http-longpoll

./: Cargo.toml  README.md  shell.nix
axum-eio/: Cargo.toml
axum-longpoll/: Cargo.toml
axum-longpoll/examples/: websocket.rs
axum-longpoll/src/: http_poll.rs  lib.rs  session.rs
axum-longpoll/tests/: tests.rs
examples/: websocket.rs
examples/echo/: Cargo.toml
examples/echo/src/: main.rs
examples/longpoll/: Cargo.toml
examples/longpoll/src/: main.rs
examples/serde/: Cargo.toml
examples/serde/src/: main.rs
http-longpoll/: Cargo.toml
http-longpoll-fallback/: Cargo.toml
http-longpoll/src/: http_poll.rs  interop.rs  lib.rs  session.rs
http-longpoll/tests/: tests.rs
src/: lib.rs
