[package]
name = "sio_rs2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] }
futures = "0.3.31"
pin-project-lite = "0.2.16"
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"

[dev-dependencies]
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = "0.4.0"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
