[package]
name = "axum-longpoll"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] }
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
http-body-util = "0.1.3"
papaya = "0.2.1"
pin-project-lite = "0.2.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
tokio = { version = "1.44.1", features = ["sync"] }
tower = "0.5.2"
uuid7 = { version = "1.1.0", features = ["serde", "uuid"] }

[dev-dependencies]
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = "0.4.0"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
