[package]
name = "http-longpoll"
version = "0.1.0"
edition = "2021"

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] , optional = true}
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
pin-project-lite = "0.2.16"
tokio = { version = "1.44.1", features = ["sync"] }
tokio-stream = { version = "0.1.17", features = [] }

[dev-dependencies]
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = "0.4.0"
tokio = { version = "1.44.1", features = ["full"] }
futures-test = "0.3.31"
tokio-test = "0.4.4"
