[package]
name = "http-longpoll"
license = "Apache-2.0"
version = "0.1.0-rc.1"
edition = "2021"
keywords = ["http", "networking"]
repository = "https://github.com/ash30/http-longpoll"
description = "Idiomatic stream + sink interface for http longpoll"

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] , optional = true}
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
pin-project-lite = "0.2.16"
tokio = { version = "1.44.1", features = ["sync"] }
tokio-stream = { version = "0.1.17", features = [] }

[dev-dependencies]
axum-extra = { version = "0.10.0", features = ["typed-header"] }
headers = "0.4.0"
tokio = { version = "1.44.1", features = ["full"] }
futures-test = "0.3.31"
tokio-test = "0.4.4"
