[package]
name = "example_echo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
http-longpoll = { version = "0.1.0-rc", path = "../../http-longpoll" }
futures-util = "0.3.31"
tokio = { version = "1.44.1", features = ["full"] }
uuid7 = { version = "1.1.0", features = ["serde"] }
tokio-stream = "0.1.17"

[dev-dependencies]
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
http-body-util = "0.1"
serde_json = "1.0"
tokio-test = "0.4"
